fix mobile drop-down z-index

--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -468,10 +468,8 @@
     margin-left: -1px;
     padding-left: 3%;
     padding-right: 3%;
-
     margin-bottom: -1px;
     border: 1px solid lightgray;
-    z-index: 50;
 }
 
 .tab-tab:hover {
