--- a/client/src/css/nav-bar.css
+++ b/client/src/css/nav-bar.css
@@ -250,6 +250,7 @@ nav{
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 151;
     }
 
     .logout-button {
